# geeagent

./: .gitignore  Cargo.toml  README.architecture-simplification-runtime-spine.md  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: pages.yml
apps/agent-runtime/: README.md  package-lock.json  package.json  tsconfig.json
apps/agent-runtime-bridge/: README.md  package-lock.json  package.json
apps/agent-runtime-bridge/src/: gateway.ts  index.ts  protocol.ts  session.ts
apps/agent-runtime/src/: chat-runtime-cli.ts  chat-runtime.test.ts  chat-runtime.ts  gateway.test.ts  gateway.ts  index.ts  native-runtime.test.ts  protocol.ts  runtime-process.test.ts  sdk-tool-policy.ts  session.test.ts  session.ts  tool-boundary-gateway.ts
apps/agent-runtime/src/native-runtime/: README.md  channel-ingress.test.ts  codex-export.test.ts  codex-export.ts  codex-external-invocations.ts  codex-mcp-server.ts  codex-mcp.test.ts  codex-plugin.ts  commands.ts  gear-invoke-envelope.test.ts  index.ts  paths.ts  protocol.ts  run-replay-golden.test.ts  sdk-turn-runner.ts  server.ts  tools.ts  turns.ts
apps/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-shell/src-tauri/capabilities/: default.json
apps/desktop-shell/src-tauri/src/: chat_runtime.rs  lib.rs  main.rs  mock_agent_runtime_bridge.js  module_runtime.rs
apps/macos-app/: Package.swift
apps/macos-app/Gears/app.icon.forge/: README.md  gear.json
apps/macos-app/Gears/bookmark.vault/: README.md  gear.json
apps/macos-app/Gears/btc.price/: README.md
apps/macos-app/Gears/media.generator/: README.md  gear.json
apps/macos-app/Gears/media.library/: README.md  gear.json
apps/macos-app/Gears/smartyt.media/: README.md  gear.json
apps/macos-app/Gears/system.monitor/: gear.json
apps/macos-app/Gears/telegram.bridge/: README.md  gear.json
apps/macos-app/Gears/todo.manager/: README.md  gear.json
apps/macos-app/Gears/twitter.capture/: README.md  gear.json
apps/macos-app/Gears/wespy.reader/: README.md  gear.json
apps/macos-app/Resources/: AppIcon.icns
apps/macos-app/Resources/Live2DHost/: README.md  app.js  index.html
apps/macos-app/Sources/GearHost/: GearHost.swift  GearNativeWindowDescriptor.swift  GearPreparationService.swift  GearRecordMapping.swift  GearRegistryCompatibility.swift
apps/macos-app/Sources/GearKit/: GearCapabilityRecord.swift  GearDependencyManifest.swift  GearKind.swift  GearManifest.swift  ModuleDisplayMode.swift
apps/macos-app/Tests/GeeAgentMacTests/: AppIconForgeGearTests.swift  AssistantTranscriptSanitizerTests.swift  BookmarkVaultGearTests.swift  GearDependencyTests.swift  GeeAgentTimeFormattingTests.swift  GlobalShortcutRegistrarTests.swift  HomeVisualEffectsTests.swift  Live2DInteractionSurfaceTests.swift  Live2DMotionCatalogTests.swift  MediaGeneratorGearTests.swift  MediaLibraryAgentImportTests.swift  NativeWorkbenchRuntimeClientPhase3ProjectionTests.swift  PersonaAssetManagerTests.swift  PersonaLive2DWebViewTests.swift  RuntimeCommandProcessTests.swift  SmartYTMediaGearTests.swift  (+5 more)
apps/macos-app/script/: build_and_run.sh
apps/macos-bridge/: Package.swift
apps/macos-bridge/script/: build_and_run.sh
apps/runtime-bridge/: Cargo.toml
config/: chat-runtime.toml  model-routing.toml  module-registry.toml
config/agents/: gee.json
crates/agent-kernel/: Cargo.toml
crates/agent-kernel/src/: lib.rs  pack.rs
crates/automation-engine/: Cargo.toml
crates/automation-engine/src/: lib.rs
crates/execution-runtime/: Cargo.toml
crates/execution-runtime/src/: lib.rs  tool.rs
crates/experience-registry/: Cargo.toml
crates/experience-registry/src/: lib.rs
crates/model-router/: Cargo.toml
crates/model-router/src/: lib.rs
crates/module-gateway/: Cargo.toml
crates/module-gateway/src/: lib.rs
crates/projection-engine/: Cargo.toml
crates/projection-engine/src/: lib.rs
crates/runtime-kernel/: Cargo.toml
crates/runtime-kernel/src/: lib.rs  reboot.rs
crates/task-engine/: Cargo.toml
crates/task-engine/src/: lib.rs
crates/workspace-runtime/: Cargo.toml
crates/workspace-runtime/src/: lib.rs
examples/agent-packs/companion-sora/: README.md  agent.json
examples/agent-packs/profile-import-template/: README.md  agent.json
public-docs/: README.md  index.html
public-docs/docs/en/: agent-persona.md  gear-development.md  gee-basic-development.md
public-docs/docs/ja/: agent-persona.md  gear-development.md  gee-basic-development.md
public-docs/docs/zh-CN/: agent-persona.md  gear-development.md  gee-basic-development.md
scripts/: validate-repo-policy.sh
(+163 files in other folders)
