[workspace]
members = [
  "crates/agent-kernel",
  "crates/task-engine",
  "crates/model-router",
  "crates/module-gateway",
  "crates/automation-engine",
  "crates/projection-engine",
  "crates/execution-runtime",
  "crates/runtime-kernel",
  "crates/experience-registry",
  "crates/workspace-runtime",
]
exclude = ["apps/desktop-shell/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
