[package]
name = "geeagent_desktop_shell"
version = "0.1.0"
description = "GeeAgent desktop shell"
authors = ["GeeAgent"]
license = "MIT"
repository = "https://example.com/geeagent"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "geeagent_desktop_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
model-router = { path = "../../../crates/model-router" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.9"
module-gateway = { path = "../../../crates/module-gateway" }
automation-engine = { path = "../../../crates/automation-engine" }
execution-runtime = { path = "../../../crates/execution-runtime" }
runtime-kernel = { path = "../../../crates/runtime-kernel" }
task-engine = { path = "../../../crates/task-engine" }
experience-registry = { path = "../../../crates/experience-registry" }
workspace-runtime = { path = "../../../crates/workspace-runtime" }
agent-kernel = { path = "../../../crates/agent-kernel" }
tempfile = "3.21"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3.21"
